--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -165,13 +165,13 @@ body a[href="/spoiler"]:hover{color:white!important}/* Spoiler Setter*/
 div.over18 .entry .buttons .first{padding-left: 0px}
 .footer-parent
 {
- height:1050px;
+ height:1614px;
  padding-bottom:0px;
  clear:both;
  text-align:center;
  width:100%;
 /*Footer image by /u/TheJBW*/
- background-image:url(%%sbstare-cadance%%);
+ background-image:url(%%sbstare-xmas%%);
  background-repeat:no-repeat;
  margin-bottom:-80px;
  background-position: 50% 100%;
@@ -199,14 +199,14 @@ h3.imgTitle{
 {
  display:block;
  width:80px;
- height:89px;
- background:url(%%tinycmc%%);
+ height:80px;
+ background:url(%%tinysnowdrop%%);
  position:fixed; 
  top:260px;
  right:-5px;
  z-index:999
 }
-body{background:url(%%scoots-bg%%) no-repeat fixed center center}
+body{background:url(%%xmasrarity%%) no-repeat fixed center center}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
 .content .md h1:before{content:">"}
 /*New post spam filtered warning*/
