--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -149,24 +149,16 @@ border-top-right-radius: 5px;
 
 #header-img
 { 
- margin:10px 10px 0px 10px;
- position:relative;
- top:16px;
- left:0px;
- background: url(%%karma-dis-peek%%);
- height: 0;
- width: 0;
- padding-top: 96px;
- padding-left: 80px;
- background-position: 0% 0%;
+ margin:10px 10px -3px 10px;
 }
 
+/*
 #header-img:hover
 { 
  background: url(%%karma-dis-peek%%);
  background-position: 80px 0px;
 }
-
+*/
 
 #header-bottom-left{padding-top:10px}
 .pagename {font-size:12pt}
