--- a/source-css/themirishponies.css
+++ b/source-css/themirishponies.css
@@ -1380,7 +1380,7 @@ Height: 100px;
 
 /* Other Emotes */
 
-a[href|="/fluttersface"], a[href|="/thatirishfella"], a[href|="/rocketmac"], a[href|="/swappaloo"], a[href|="/cutecane"]
+a[href|="/fluttersface"], a[href|="/thatirishfella"], a[href|="/rocketmac"], a[href|="/swappaloo"], a[href|="/cutecane"], a[href|="/spacejam"]
 {display:block;clear:none;float:left;background-image:url(%%Other%%)}
 
 a[href="/fluttersface"] {
@@ -1411,6 +1411,12 @@ a[href="/cutecane"] {
 background-position: -698px -0px;
 Width: 200px;
 Height: 183px;
+}
+
+a[href="/spacejam"] {
+background-position: -0px -200px;
+Width: 243px;
+Height: 150px;
 }
 
 
