Stylesheet/emote/tag updates 2014-01-09

--- a/source-css/cianimotes.css
+++ b/source-css/cianimotes.css
@@ -1,3 +1,5 @@
+a[href|="/slowclap"] { display: block; clear: none; float: left; background-image: url(%%slowclap%%); width: 131px; height: 150px; background-position: -0px -0px }
+
 a[href|="/itsfine"] { display: block; clear: none; float: left; background-image: url(%%everythingisfine%%); width: 240px; height: 150px; background-position: -0px -0px }
 
 a[href|="/ppchew"] { display: block; clear: none; float: left; background-image: url(%%ppchew%%); width: 122px; height: 150px; background-position: -0px -0px }
