--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -7,7 +7,7 @@
 
 .sidecontentbox .helplink + .title > h1
 {
- color:white!important;
+ color:#fff7fd!important;
  font-size:1px!important;
  display:inline-block
 }
@@ -16,22 +16,22 @@
 {
  color:gray!important;
  font-size:13px!important;
- content:"CUTIE MOD CRUSADERS";
+ content:"CANTERLOT HIGH FACULTY";
  display:inline-block
 }
 
 .sidecontentbox a.helplink
 {
- color:white!important;
+ color:#fff7fd!important;
  font-size:0px!important;
  content:""
 }
 
 .sidecontentbox a.helplink:after
 {
- color:#369!important;
+ color:#ac1280!important;
  font-size:11px!important;
- content:"message the mods"
+ content:"message the mods";
 }
 
 .sidecontentbox .helplink + .title > h1:after
@@ -291,7 +291,6 @@ a {
 
 #ad_main {
     position:relative;
-    top:45px;
 }
 
 .arrow.up {
@@ -528,7 +527,6 @@ div.sidebox.create {
 
 .sidecontentbox {
     position:relative;
-    top:45px;
 }
 
 .sidecontentbox .content {
@@ -537,7 +535,6 @@ div.sidebox.create {
 
 #ad-main {
     position:relative;
-    top:45px;
 }
 
 #search input[type=text] {
