--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -247,3 +247,13 @@ a[href|="/hamntor"] {
     background-repeat: no-repeat;
     background-image: url(%%hamntor%%)
     }
+
+a[href|="/swordy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 297px;
+    height: 296px;
+    background-repeat: no-repeat;
+    background-image: url(%%swordy%%)
+    }
