--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -165,13 +165,13 @@ body a[href="/spoiler"]:hover{color:white!important}/* Spoiler Setter*/
 div.over18 .entry .buttons .first{padding-left: 0px}
 .footer-parent
 {
- height:1614px;
+ height:500px;
  padding-bottom:0px;
  clear:both;
  text-align:center;
  width:100%;
-/*Footer image by /u/TheJBW*/
- background-image:url(%%sbstare-xmas%%);
+/*Footer image by DestinyProgenitor on Deviant Art*/
+ background-image:url(%%sbtavi%%);
  background-repeat:no-repeat;
  margin-bottom:-80px;
  background-position: 50% 100%;
@@ -676,6 +676,8 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 }
 
 .side .md h2:first-of-type {padding-top:19px;border-top:1px solid #CCC;}
+
+/*suck it*/
 
 .side .md h2:first-of-type:before
 {
