--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -33,6 +33,10 @@ a.author.id-t2_aj4cg{content:"";font-size:0px!important;display:inline-block;ver
 a.author.id-t2_aj4cg:after{font-size:10px!important;display:block;letter-spacing:normal}
 a.author.id-t2_aj4cg:after {content:" uo‾ouǝ"}
 
+a.author.id-t2_a26t0{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
+a.author.id-t2_a26t0:after{font-size:8px!important;display:block;letter-spacing:normal}
+a.author.id-t2_a26t0:after {content:"I have nothing to do with anything in here"}
+
 
 /*Background (stolen from Plounge) for testing*/ 
 
