--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -32,7 +32,7 @@ lolyeah organization in foodmanes okay
 
 /* Background Image (Avebone, don't change this(Fixed it for you ~Quill)) */
 body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%bottomthingy%%)  no-repeat fixed 55% 95% !important; }
+    background:  url(%%NissanVersa%%)  no-repeat fixed 55% 95% !important; }
 
 
 
