--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -238,6 +238,18 @@ a[href|="/flutterboo"] {
     background-position: -100px -0px     
     }
 
+/* SKAAAAAAAH */
+
+a[href|="/flutterbat"], a[href|="/thisisminenow"], a[href|="/myapple"], a[href|="/iguessimavampire"], a[href|="/okaaay"] { 
+    display: block; 
+    background: url(%%batsheet%%); 
+    float: left;
+    clear:none;
+    }
+ 
+a[href|="/flutterbat"] { background-position: -0px -0px; width: 150px; height: 150px; }
+a[href|="/thisisminenow"], a[href|="/myapple"] { background-position: -0px -150px; width: 162px; height: 125px; }
+a[href|="/iguessimavampire"], a[href|="/okaaay"] { background-position: -0px -275px; width: 179px; height: 100px; }
 
 /* More Flutter emotes - with a new sheet! */
 
@@ -296,7 +308,7 @@ a[href|="/flutterheart"]  {
     background-position: -1011px -0px 
     }
 /* HOLY SHEET MORE EMOTES */
-a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"], a[href|="/cuteflutter"], a[href|="/animuflutter"], a[href|="/cloudbutt"], a[href|="/flutterbutt"], a[href|="/imsorry"], a[href|="/ididntmeanit"],  a[href|="/fluttertongue"], a[href|="/flutteryou"], a[href|="/flyou"], a[href|="/supershy"], a[href|="/ohhmy"] {
+a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"], a[href|="/cuteflutter"], a[href|="/animuflutter"], a[href|="/buttbutt"], a[href|="/flutterbutt"], a[href|="/imsorry"], a[href|="/ididntmeanit"],  a[href|="/fluttertongue"], a[href|="/flutteryou"], a[href|="/flyou"], a[href|="/supershy"], a[href|="/ohhmy"] {
 
     display: block;
     clear: none;
@@ -320,7 +332,7 @@ a[href|="/imsorry"], a[href|="/ididntmeanit"] {
     width: 266px;
     background-position: -526px -0px 
     }
-a[href|="/cloudbutt"], a[href|="/flutterbutt"] {
+a[href|="/buttbutt"], a[href|="/flutterbutt"] {
     width: 236px;
     background-position: -792px -0px 
     }
@@ -342,7 +354,7 @@ a[href|="/supershy"], a[href|="/ohhmy"] {
     }
 /* FANCY SHEET I MEAN SHEET #4 */
 
-a[href|="/dappershy"], a[href|="/fancyshy"], a[href|="/colonthree"], a[href|="/cutieflutter"], a[href|="/flutterland"], a[href|="/lostinflutterland"], a[href|="/mad"], a[href|="/attention"], a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"], a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"],  a[href|="/flutterhood"], a[href|="/bunnyhood"], a[href|="/bunnyhoodshy"], a[href|="/flutterconcerned"], a[href|="/areyouokay"], a[href|="/shyconcerned"], a[href|="/chibiflutterspy"], a[href|="/chibispy"], a[href|="/cloudfilly"], a[href|="/cloudshy"], a[href|="/pleeease"], a[href|="/flutterplease"] {
+a[href|="/dappershy"], a[href|="/fancyshy"], a[href|="/colonthree"], a[href|="/cutieflutter"], a[href|="/flutterland"], a[href|="/lostinflutterland"], a[href|="/mad"], a[href|="/attention"], a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"], a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"],  a[href|="/flutterhood"], a[href|="/bunnyhood"], a[href|="/bunnyhoodshy"], a[href|="/flutterconcerned"], a[href|="/areyouokay"], a[href|="/shyconcerned"], a[href|="/chibiflutterspy"], a[href|="/chibispy"], a[href|="/buttfilly"], a[href|="/buttshy"], a[href|="/pleeease"], a[href|="/flutterplease"] {
 
         display: block;
     clear: none;
@@ -375,7 +387,7 @@ a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"] {
     width: 137px;
     background-position: -1003px -0px;
     }
-a[href|="/cloudfilly"], a[href|="/cloudshy"] {
+a[href|="/buttfilly"], a[href|="/buttshy"] {
     width: 153px;
     background-position: -1140px -0px;
     }
