--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -1,9 +1,13 @@
 /* LIMITS:
- * Limit on number of images uploaded is 50. I'll probably create /r/ponyanimotes when we hit 30 or something.
- * Second thoughts: /r/ponymotesanimated would be better, as they'd still show up when you search "r/ponymotes".
+ * Limit on number of images uploaded is 50.
  * Limit on CSS size is approx 100,000 characters
- * Limit on image size is 500kB
+ * Limit on image size is 500kB (Approx)
  */
+
+/* Subscriber count + active user text changer */
+div.titlebox span.word {display:none}
+div.titlebox .subscribers span.number:after {content:" Registered Voters"}
+div.titlebox .users-online span.number:after {content:" at the Voting Booth"}
 
 /* vote diagram */
 .wiki-page a[href="/ponymotesvotediagram"] {
@@ -95,7 +99,7 @@ text-shadow: orangered 0 0 2px;
 opacity: 0.4;
 }
 
-.linkflair-closed .arrow, .linkflair-denied .arrow, .linkflair-approved .arrow{
+.linkflair-closed .arrow, .linkflair-denied .arrow, .linkflair-approved .arrow, .linkflair-invalid .arrow {
 visibility: hidden;
 }
 
@@ -106,6 +110,16 @@ border: 1px solid #D27979;
 text-transform: uppercase;
 }
 
+.linkflair-updated .linkflairlabel {
+max-width: 20em;
+background-color: yellow;
+border-color: olive;
+}
+
+.linkflair-updated .entry {
+background: url(%%linkflairs%%) -157px -50px no-repeat;
+padding-left: 55px;
+}
 
 .linkflair-approved .entry {
 background: url(%%linkflairs%%) -200px 0 no-repeat;
@@ -304,6 +318,7 @@ vertical-align: middle;
 .flair-grannysmith {background-position: 0 -1040px;}
 .flair-aloe {background-position: 0 -1056px;}
 .flair-mayormare {background-position: 0 -1072px;}
+.flair-surprise {background-position: 0 -1088px;}
 
 /* EMOTES */
 
@@ -325,19 +340,19 @@ vertical-align: middle;
  */
 
 /* 70x70a 'motes. */
-a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"]
+a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"]
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
-a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/lunahmm"], a[href|="/scootexcited"]
+a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/lunahmm"], a[href|="/scootexcited"], a[href|="/fluttereyebrow"], a[href|="/smugcolgate"], a[href|="/trixielecture"]
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
-a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[href|="/twihappycry"], a[href|="/properbudget"], a[href|="/celestiaglee"], a[href|="/frittergasp"], a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/whatatwist"], a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/rdsmirk"], a[href|="/sombrarage"], a[href|="/gildaconfused"], a[href|="/rarityspy"], a[href|="/twilightyay"]
+a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[href|="/twihappycry"], a[href|="/properbudget"], a[href|="/celestiaglee"], a[href|="/frittergasp"], a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/whatatwist"], a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/sombrarage"], a[href|="/gildaconfused"], a[href|="/rarityspy"], a[href|="/twilightyay"], a[href|="/tiadisapproval"]
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
-a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/nightmaresparkle"], a[href|="/magnemites"], a[href|="/princessfluttershy"], a[href|="/pinkpyro"], a[href|="/happynewyear"]
+a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/nightmaresparkle"], a[href|="/magnemites"], a[href|="/princessfluttershy"], a[href|="/pinkpyro"], a[href|="/happynewyear"], a[href|="/flutterbat"], a[href|="/hnng"]
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
@@ -354,11 +369,11 @@ a[href|="/twismirk"], a[href|="/huglife"], a[href|="/happyderp"], a[href|="/spea
 {background-image:url(%%misfitsa%%);display:block;float:left;}
 
 /* Misfits b */
-a[href|="/braecozy"], a[href|="/caramelsad"], a[href|="/twilicry"], a[href|="/sfpride"], a[href|="/sfmotherofgod"], a[href|="/sbdisgusting"], a[href|="/absolutelydisgusting"], a[href|="/ppwhywouldyoudothat"], a[href|="/fluttersnoo"], a[href|="/twilicute"], a[href|="/superlazy"], a[href|="/dashcuteblanket"], a[href|="/paperwork"], a[href|="/objection"], a[href|="/lunacomehere"], a[href|="/fluttryay"]
+a[href|="/braecozy"], a[href|="/caramelsad"], a[href|="/twilicry"], a[href|="/sfpride"], a[href|="/sfmotherofgod"], a[href|="/sbdisgusting"], a[href|="/absolutelydisgusting"], a[href|="/ppwhywouldyoudothat"], a[href|="/fluttersnoo"], a[href|="/twilicute"], a[href|="/superlazy"], a[href|="/dashcuteblanket"], a[href|="/paperwork"], a[href|="/objection"], a[href|="/lunacomehere"], a[href|="/fluttryay"], a[href|="/jaglad"]
 {background-image:url(%%misfitsb%%);display:block;float:left;}
 
 /* Misfits c */
-a[href|="/twitiger"], a[href|="/twiger"], a[href|="/tanktwi"], a[href|="/lunacelehug"], a[href|="/magicmissile"], a[href|="/icastmagicmissile"], a[href|="/pinkmage"]
+a[href|="/twitiger"], a[href|="/twiger"], a[href|="/tanktwi"], a[href|="/lunacelehug"], a[href|="/magicmissile"], a[href|="/icastmagicmissile"], a[href|="/pinkmage"], a[href|="/trixiedisappointed"], a[href|="/trixiedoublefacehoof"], a[href|="/raribat"]
 {background-image:url(%%misfitsc%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -394,21 +409,21 @@ a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutral
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
-a[href|="/bonboudicca"], a[href|="/celticbonbon"]
+a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/flutterbat"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"]
 {background-position: -200% -200%;}
 
 
 /* Grid pos 0,3 'motes */
-a[href|="/whatatwist"]
+a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"]
 {background-position: 0% -300%;}
 
 /* Grid pos 1,3 'motes */
-a[href|="/rdsquishyface"], a[href|="/soveryawesome"]
+a[href|="/rdsquishyface"], a[href|="/soveryawesome"], a[href|="/trixielecture"]
 {background-position: -100% -300%;}
 
 
 /* Grid pos 2,3 'motes */
-a[href|="/rdsmirk"]
+a[href|="/rdsmirk"], a[href|="/cheekydash"]
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
@@ -425,10 +440,11 @@ a[href|="/rarityspy"]
 
 /* Grid pos 0,5 'motes */
 a[href|="/twilightyay"]
-{background-position: 0% -500%;}
+{background-position: 0 -500%;}
 
 /* Grid pos 1,5 'motes */
-
+a[href|="/tiadisapproval"]
+{background-position: -100% -500%}
 
 /* Animated Emotes */
 a[href|="/moofintezzter"], a[href|="/muffintester"] {background: url(%%muffintester%%) no-repeat;width:200px;height:177px;display:block;float:left;}
@@ -447,6 +463,7 @@ a[href|="/majestic"] {background-image: url(%%majestic%%);width:140px;height:100
 a[href|="/twichargin"], a[href|="/twiscrunch"] {background-image: url(%%twichargin%%);width:150px;height:150px;display:block;float:left;}
 a[href|="/manspikebrows"], a[href|="/sexualharrassment"] {background-image: url(%%sexualharrassment%%);width:150px;height:150px;display:block;float:left;}
 a[href|="/manspikeheythere"], a[href|="/msheythere"], a[href|="/spikeheythere"] {background-image: url(%%heythere%%);width:150px;height:150px;display:block;float:left;}
+a[href|="/lyrapimpstrings"] {background-image: url(%%lyrapimpstrings%%);width:159px;height:170px;display:block;float:left;}
 
 
 /* Misfit Emotes */
@@ -482,3 +499,6 @@ a[href|="/lunacelehug"] {width:300px;height:205px;background-position: 0 -236px;
 a[href|="/lunacomehere"] {width:175px;height:200px;background-position: -300px -683px;}
 a[href|="/fluttryay"] {width:150px;height:111px;background-position: -314px -413px;}
 a[href|="/magicmissile"], a[href|="/icastmagicmissile"], a[href|="/pinkmage"] {width:225px;height:125px;background-position: 0 -441px;}
+a[href|="/jaglad"] {width:68px;height:100px;background-position: -415px 0;}
+a[href|="/trixiedisappointed"], a[href|="/trixiedoublefacehoof"] {width:118px;height:100px;background-position: -225px -441px;}
+a[href|="/raribat"] {width:200px;height:141px;background-position: -300px 0;}
