Stylesheet/emote/tag updates 2014-01-12

--- a/source-css/twiquisition.css
+++ b/source-css/twiquisition.css
@@ -200,7 +200,7 @@ background-image: url(%%8bitsombra%%);
 display: none;
 }  
 .subscribers .number::after {
-content: " best ponies";
+content: " OP fat Alicorns";
 }
 .users-online .word {
 display: none;
