--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -1,3 +1,10 @@
+body{background:url(%%CCisBP%%) no-repeat fixed left center}
+.content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
+.content .md h1:before{content:">"}
+/*New post spam filtered warning*/
+#title-field.roundfield:before
+
+
 a[href|="/ccpose"] {
 float:left;
 width:140px;
@@ -21,7 +28,6 @@ height:165px;
 background-repeat:no-repeat;
 background-image:url(%%ccpose2%%);
 }
-
 
 a[href|="/ccpaper"] {
 float:left;
@@ -361,3 +367,4 @@ a[href|="/ccsocks2"] {
     background-repeat:no-repeat;
     background-image:url(%%ccsocks2%%);
 }
+
