--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -198,15 +198,15 @@ h3.imgTitle{
 .side a[href="http://www.reddit.com/r/MLPLounge/new/"]
 {
  display:block;
- width:80px;
- height:80px;
- background:url(%%tinysnowdrop%%);
+ width:70px;
+ height:79px;
+ background:url(%%fillyluna%%);
  position:fixed; 
  top:260px;
  right:-5px;
  z-index:999
 }
-body{background:url(%%xmasrarity%%) no-repeat fixed center center}
+body{background:url(%%radcc%%) no-repeat fixed center center}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
 .content .md h1:before{content:">"}
 /*New post spam filtered warning*/
