--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -89,11 +89,12 @@ div.over18 .entry .buttons .first{padding-left: 0px}
 
 #searchexpando.infobar 
 {
- background-image:url(%%crackle%%);
+ background-image:url(%%KarmaHawks%%);
  background-repeat:no-repeat;
  background-position:right bottom;
  background-color:transparent;
- border:1px dotted black
+ border:1px dotted black;
+ height:100px!important
 }
 .sidecontentbox h1{text-align:left}
 
@@ -261,7 +262,7 @@ a[href^="/"][href*="-in-"],a[href^="/"][href$="-in"],a[href^="/"][href*="-inp-"]
 
 body a[href="/spoiler"]{background:black!important;color:black!important}
 body a[href="/spoiler"]:hover{color:white!important}/*Pinkie Pie NPT Warnings*//*DO _NOT_ PUT ANY COMMENTS IN-BETWEEN THE NPTWARNING TAGS! Do not remove the tags either, they are used by modtool and the bot! The tags must be on their own line!*/
-/*{NPTWARNING}*/
+/*{NPTWARNING}
 .formtabs-content .infobar
 {
  margin-left:50px;
@@ -289,7 +290,7 @@ body a[href="/spoiler"]:hover{color:white!important}/*Pinkie Pie NPT Warnings*//
 {
  background:url(%%pinkiemessage%%) no-repeat;
 }
-/*{/NPTWARNING}*/
+{/NPTWARNING}*/
 /* Spoiler Setter*/
 .marknsfw-button a[href="#"], .unmarknsfw-button a[href="#"]
 {
